--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "mini-css-extract-plugin": "^0.4.1"
   },
   "dependencies": {
+    "file-loader": "^1.1.11",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "url-loader": "^1.0.1"
   }
 }
