--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack -d --watch"
+    "dev": "webpack -d --watch",
+    "start": "nodemon server/index.js"
   },
   "author": "Jamie",
   "license": "ISC",
@@ -27,9 +28,23 @@
     "mini-css-extract-plugin": "^0.4.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "express": "^4.16.3",
     "file-loader": "^1.1.11",
+    "history": "^4.7.2",
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-google-login": "^3.2.1",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
+    "react-scripts": "^1.1.4",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "url-loader": "^1.0.1"
   }
 }
