--- a/package.json
+++ b/package.json
@@ -30,8 +30,14 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.3",
+    "express-session": "^1.11.3",
+    "faker": "^4.1.0",
     "file-loader": "^1.1.11",
     "history": "^4.7.2",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0",
+    "pg": "^6.1.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -45,6 +51,7 @@
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "url-loader": "^1.0.1"
+    "url-loader": "^1.0.1",
+    "webpack": "^4.17.1"
   }
 }
