--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack -d --watch",
+    "dev": "webpack -d --watch --display-error-details",
     "start": "nodemon server/index.js"
   },
   "author": "Jamie",
@@ -14,6 +14,7 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
@@ -25,12 +26,13 @@
     "eslint-plugin-react": "^7.4.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.1"
+    "mini-css-extract-plugin": "^0.4.1",
+    "webpack-cli": "^3.1.0"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.3",
-    "express-session": "^1.11.3",
+    "express-session": "^1.15.6",
     "faker": "^4.1.0",
     "file-loader": "^1.1.11",
     "history": "^4.7.2",
@@ -51,7 +53,6 @@
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.17.1"
+    "url-loader": "^1.0.1"
   }
 }
