--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "parser": "babel-eslint",
-  "plugins": ["react", "import", "jsx-a11y"],
+  "plugins": ["prettier", "react", "import", "jsx-a11y"],
   "env": {
     "browser": true,
     "node": true,
