--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,9 @@
 {
-  "presets": [
-      "env", "react"
-  ],
+  "presets": ["env", "react"],
+  "env": {
+    "test": {
+      "plugins": ["transform-es2015-modules-commonjs"]
+    }
+  },
   "plugins": ["transform-object-rest-spread"]
 }
