--- a/package.json
+++ b/package.json
@@ -4,10 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:update": "NODE_ENV=test jest -u",
     "dev": "webpack -d --watch --display-error-details",
     "start": "nodemon server/index.js",
     "format": "prettier --list-different --single-quote --print-width=120 \"js/**/*.{js,jsx}\""
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|scss|svg)$": "identity-obj-proxy"
+    }
   },
   "author": "Jamie",
   "license": "ISC",
@@ -19,6 +28,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-loader": "^2.1.0",
@@ -27,12 +38,15 @@
     "eslint-plugin-react": "^7.4.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^23.5.0",
     "mini-css-extract-plugin": "^0.4.1",
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "babel-plugin-styled-components": "^1.6.3",
+    "enzyme-to-json": "^3.3.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "faker": "^4.1.0",
