--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "axios": "^0.18.0",
     "babel-plugin-styled-components": "^1.6.3",
     "enzyme-to-json": "^3.3.4",
+    "eslint-plugin-prettier": "^2.6.2",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "faker": "^4.1.0",
