--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-plugin-styled-components": "^1.6.3",
+    "cors": "^2.8.4",
     "enzyme-to-json": "^3.3.4",
     "eslint-plugin-prettier": "^2.6.2",
     "express": "^4.16.3",
