--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
+    "passport-local-postgres": "^1.0.3",
     "pg": "^6.1.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
