--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-plugin-styled-components": "^1.6.3",
+    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "enzyme-to-json": "^3.3.4",
     "eslint-plugin-prettier": "^2.6.2",
@@ -57,6 +58,7 @@
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "passport-local-postgres": "^1.0.3",
     "pg": "^6.1.0",
     "prop-types": "^15.6.2",
