change to browser router and fix text area;

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "test:update": "NODE_ENV=test jest -u",
-    "dev": "webpack -d --watch --display-error-details",
+    "dev": "webpack -d --watch --display-error-details --history-api-fallback",
     "start": "nodemon server/index.js",
     "format": "prettier --list-different --single-quote --print-width=120 \"js/**/*.{js,jsx}\""
   },
