--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "faker": "^4.1.0",
     "file-loader": "^1.1.11",
     "history": "^4.7.2",
+    "mongoose": "^5.3.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
