--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,12 @@
 {
-  "presets": ["env", "react"],
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
   "env": {
     "test": {
       "plugins": ["transform-es2015-modules-commonjs"]
     }
   },
-  "plugins": ["transform-object-rest-spread"]
+  "plugins": [
+    "transform-object-rest-spread",
+    "@babel/plugin-proposal-class-properties"
+  ]
 }
