--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "author": "Jamie",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -44,6 +44,8 @@
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/preset-react": "^7.0.0",
     "axios": "^0.18.0",
     "babel-plugin-styled-components": "^1.6.3",
     "body-parser": "^1.18.3",
@@ -55,13 +57,14 @@
     "faker": "^4.1.0",
     "file-loader": "^1.1.11",
     "history": "^4.7.2",
+    "medium-editor": "^5.23.3",
     "mongoose": "^5.3.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
     "passport-local-postgres": "^1.0.3",
-    "pg": "^6.1.0",
+    "pg": "^7.8.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -70,7 +73,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
-    "react-scripts": "^1.1.4",
+    "react-scripts": "^2.1.4",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
