--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "file-loader": "^1.1.11",
     "history": "^4.7.2",
     "medium-editor": "^5.23.3",
+    "mongodb": "^3.1.13",
     "mongoose": "^5.3.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
@@ -65,7 +66,7 @@
     "passport-local-mongoose": "^5.0.1",
     "passport-local-postgres": "^1.0.3",
     "pg": "^7.8.0",
-    "prop-types": "^15.6.2",
+    "prop-types": "^15.7.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-google-login": "^3.2.1",
