change packe json

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "author": "Jamie",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.5",
@@ -44,13 +46,17 @@
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
+    "@babel/core": "^7.3.3",
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/preset-react": "^7.0.0",
     "axios": "^0.18.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^8.2.6",
     "babel-plugin-styled-components": "^1.6.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "enzyme-to-json": "^3.3.4",
+    "eslint": "^4.19.1",
     "eslint-plugin-prettier": "^2.6.2",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
@@ -66,6 +72,7 @@
     "passport-local-mongoose": "^5.0.1",
     "passport-local-postgres": "^1.0.3",
     "pg": "^7.8.0",
+    "prettier": "^1.16.4",
     "prop-types": "^15.7.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
