--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "@babel/core": "^7.3.3",
     "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
     "@babel/preset-react": "^7.0.0",
     "axios": "^0.18.0",
     "babel-core": "^7.0.0-bridge.0",
