--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.1.0",
     "mini-css-extract-plugin": "^0.4.1",
+    "webpack": "^4.29.5",
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
-    "@babel/core": "^7.3.3",
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
     "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
