--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,8 @@
   "env": {
     "test": {
       "plugins": ["transform-es2015-modules-commonjs"]
-    }
+    },
+    "sourceMaps": true
   },
   "plugins": [
     "transform-object-rest-spread",
