--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "8.11.2"
+    "node": "8.11.2",
+    "npm": "6.x"
   },
   "scripts": {
     "test": "jest",
