--- a/package.json
+++ b/package.json
@@ -53,12 +53,12 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
-    "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
     "@babel/preset-react": "^7.0.0",
     "axios": "^0.18.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.6",
     "babel-plugin-styled-components": "^1.6.3",
+    "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
@@ -73,6 +73,7 @@
     "medium-editor": "^5.23.3",
     "mongodb": "^3.1.13",
     "mongoose": "^5.3.0",
+    "nodemon": "^1.18.10",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
