--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^1.0.0",
+    "css-loader": "^1.0.1",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^4.9.0",
@@ -49,6 +49,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.1.0",
     "mini-css-extract-plugin": "^0.4.1",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.1.0"
   },
