--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "reset-css": "^4.0.1",
     "styled-components": "^3.4.5",
     "url-loader": "^1.0.1"
   }
