--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jest": "^24.1.0",
     "mini-css-extract-plugin": "^0.4.1",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.1.0"
   },
