--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "mini-css-extract-plugin": "^0.4.1",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.29.5",
-    "webpack-cli": "^3.1.0"
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.3.0",
@@ -65,13 +65,12 @@
     "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
+    "compression-webpack-plugin": "^2.0.0",
     "cors": "^2.8.4",
     "enzyme-to-json": "^3.3.4",
-    "eslint": "^4.19.1",
     "eslint-plugin-prettier": "^2.6.2",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "faker": "^4.1.0",
     "file-loader": "^1.1.11",
     "history": "^4.7.2",
     "mongodb": "^3.1.13",
@@ -83,6 +82,10 @@
     "passport-local-mongoose": "^5.0.1",
     "passport-local-postgres": "^1.0.3",
     "pg": "^7.8.0",
+    "preact": "^8.4.2",
+    "preact-compat": "^3.18.5",
+    "preact-context": "^1.1.3",
+    "preact-router": "^2.6.1",
     "prettier": "^1.16.4",
     "prop-types": "^15.7.2",
     "react": "^16.4.2",
@@ -99,6 +102,7 @@
     "redux-thunk": "^2.3.0",
     "reset-css": "^4.0.1",
     "styled-components": "^3.4.5",
+    "uglifyjs-3-webpack-plugin": "^1.2.4",
     "url-loader": "^1.0.1"
   }
 }
